@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.36 2002/02/19 15:50:18 ukai Exp $ */
+/* $Id: proto.h,v 1.37 2002/03/05 16:58:09 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -189,7 +189,6 @@ extern Buffer *loadBuffer(URLFile *uf, Buffer *newBuf);
 extern Buffer *loadImageBuffer(URLFile *uf, Buffer *newBuf);
 #endif
 extern void saveBuffer(Buffer *buf, FILE * f);
-extern void saveBufferDelNum(Buffer *buf, FILE * f, int del);
 extern Buffer *getshell(char *cmd);
 extern Buffer *getpipe(char *cmd);
 extern Buffer *openPagerBuffer(InputStream stream, Buffer *buf);
